css/main.css
html {
    overflow-y: scroll;
    height: 100%;   /* this will push the footer to bottom */
}

body {
    margin:0;
    padding:0;
    height: 100%;
    background-color: rgb(243,243,243);
}

body.en :lang(es) {
    display: none;
}

body.es :lang(en) {
    display: none;
}

#main_header {
   background: rgba(65,110,225,0.9);

/*[> fallback *
  background-color: #1a82f7;
  [>background: url(images/linear_bg_2.png);<]
  background-repeat: repeat-x;

  [> Safari 4-5, Chrome 1-9 <]
  background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#1a82f7), to(#2F2727));

  [> Safari 5.1, Chrome 10+ <]
  background: -webkit-linear-gradient(top,  rgba(65,110,225,0.9), rgba(128,0,0,1));

  [>[> Firefox 3.6+ <]
  background: -moz-linear-gradient(top, #2F2727, #1a82f7);

  [> IE 10 <]
  background: -ms-linear-gradient(top, #2F2727, #1a82f7);

  [> Opera 11.10+ <]
  background: -o-linear-gradient(top, #2F2727, #1a82f7);<]*/



    width:100%;
    height:100px;
    position:fixed;
    top:0;
    border-bottom-left-radius: 10px;
    border-bottom-right-radius: 10px;
    z-index: 99;
}

#container_center {
    min-height: 100%;
    padding-top:100px;
    margin-left:15%;
    margin-right:15%;
    padding-bottom: 2%;
    margin-bottom: -60px;
}

#container_center:after {
    content: "";
    display: block;
}

#main_footer, #container_center:after {
    height:150px;
    border-top-right-radius: 30px;
    border-top-left-radius: 30px;
}

#main_footer {
    width:100%;
    background: rgba(65,110,225,0.94);
    color: whitesmoke;
    position: relative;
}

/*#main_footer hr {
    display: inline-block;
    height: 1px;
    border: 0;
    border-top: 1px solid #ccc;
    margin: 1em 0;
    padding: 0;
    width: 98%;
    margin-bottom: 0px;
    margin-top: 41px;
    border-top-width: 0.5;
    margin-left: 4px;
    margin-right: 4px;
}*/

#main_footer_copyNres {
    font-size:small;
    height:50px;
    position: absolute;
    bottom: 0;
    height: 25%;
    width: 100%;
    border-top-right-radius: 40px;
    border-top-left-radius: 40px;
    border-top: 1px solid;
}

#Copyright {
    text-align:left;
    float:left;
    padding-left: 20px;
    padding-top: 10px;
}

#resolution {
    text-align:right;
    float:right;
    padding-right: 20px;
    padding-top: 10px;
}

.container {
    margin-top:2%;
    padding: 2%;
    background-color:White;
    border-radius: 10px;
    /*overflow:hidden;*/
}

#container_upper {
    height:60%;
}

#left_box_logo {
    float:left;
    padding-top:8px;
    padding-bottom: 4px;
    padding-left:4px;
    margin-bottom:-2%;
}

#right_box_text {
    padding-top: 4px;
    padding-bottom: 2px;
    padding-left: 4px;
    margin-bottom: -2%;
    font-size: 22px;
    color: whitesmoke;
}

#company_he {
    padding-top:0;
    padding-right:1%;
}

#company_en {
    padding-right:1%;
}

a {
    text-decoration: none;
}

nav {
    background: rgba(128,0,0,0.90);
    height:40%;
    border-bottom-left-radius: 10px;
    border-bottom-right-radius: 10px;
}

nav a:link {
    color: whitesmoke;
    font-weight: bold;
    height: 40%;
}

nav a:visited {
    color: whitesmoke;
}

nav a:hover {
    color: slategrey;
}

nav ul {
    font-family: Didot, "Didot LT STD", "Hoefler Text", Garamond, "Times New Roman", serif;
    color: gray;
    font-size: 15px;
    margin: 0;
    padding-top: 9px;
    padding-left: 5px;
    list-style: none;
}

nav ul li {
    display: block;
    position: relative;
    float: left;
    color: whitesmoke;
    margin-left:15px;
    margin-right:15px;
}

#language {
    float:right;
    margin-right:9px;
    margin-top:2px;
    margin-bottom:2px;
    font-size:smaller;
    font-family:serif;
}

.text {
    color: black;
    font-family: "Times New Roman";
    font-size: 18px;
}

.text_center {
    text-align: center;
}

.caption {
    font-family: serif;
    font-style: italic;
}

.imageTable {
    text-align: center;
}

.topics {
    text-align: center;
    font-size: 400%;
    font-weight: 900;
    color: rgba(65,110,225,0.9);
}

.topics_medium {
    text-align: center;
    font-size: 300%;
    font-weight: 900;
    color: rgba(65,110,225,0.9);
}

#sitemap {

    height: 65%;
    margin-top: 0px;
    padding-top: 20px;
    padding-right: 40px;
    padding-bottom: 5px;
    padding-left: 40px;

}

.col_footer {
    float: left;
    width: 155px;
    padding: 10px 3px 8px 24px;
    font-size: small;
}

#sitemap ul{
    list-style-type : none;
    margin-top      : 4px;
    padding-left    : 0px;
}

#sitemap ul li{
    padding-bottom   : 2px;
}

#main_footer ul a:hover{
    color: darkgrey;
}

#main_footer a{
    color: lightgray;
}

.col_header {
    font-weight: lighter;
    color:white;
}

#partners img{
    padding: 20px 20px 20px 20px;
    margin:auto;
}

#partners img:hover{
    box-shadow: 4px 5px 13px rgb(219, 214, 214);
}

#partners div:not(:first-child) {
    text-align:center;
}

.main_box {
    box-shadow: 5px 5px 30px rgb(199, 199, 199);
    border-top-right-radius: 5px;
    border-top-left-radius: 5px;
    border-bottom-right-radius: 5px;
    border-bottom-left-radius: 5px;
}

.box_header {
    text-align: left;
    font-weight: 900;
    color: rgba(65,110,225,0.9);
    box-shadow: 0px 5px 8px -8px black;
}

.box_header_large {
    font-size: 150%;
    padding: 15px 0px 10px 15px;
}

.box_header_medium {
    font-size: 125%;
    padding: 8px 0px 5px 10px;
}

.main_col_box{
    width: 32%;
    height: 180px;
    float:left;
    display:inline-block;
}

#middle {
    margin: 0px 13px 0px 13px;
}

.main_col_box:hover{
    /*box-shadow: -15px 5px 30px rgb(199, 199, 199);*/
}

.multi_box {
    height: 180px;
    font-size:13px;
}

.multi_box ul{
    padding-left:27px;

}

.multi_box li{
    margin-top:4px;
}

.box_table {
    font-size: 13px;
    margin: 5px 0px 0px 8px;
    width:95%;
}

.box_table tr:hover{
    cursor: pointer;
    font-weight: bold;
    color: rgb(25, 25, 34);
}

.box_table td:nth-child(2) {
text-align: right;
width: 30%;
}

.box_text {
    margin: 5px 5px 0px 8px;
}

#text_box {
    width: 64%;
    height: 180px;
    padding: 1px 0px 1px 0px;
    margin: 0px 0px 20px 34%;
}

#text_box_body {
    font-size: 15px;
    /*text-align: justify;*/
    /*font-style:oblique;*/
}

#text_box_header {
    margin-bottom: 2%;
    padding-top: 3%;
    font-size: 16px;
}

.split_box {
    margin-bottom: -4px;
}

.auto-resizable-iframe {
    max-width: 853px;
    max-height: 480px;
    margin: 0px auto;
}

.auto-resizable-iframe > div {
    position: relative;
    padding-bottom: 70%;
    height: 0px;
}

.auto-resizable-iframe iframe {
    position: absolute;
    top: 0px;
    left: 0px;
    width: 100%;
    height: 80%;
}

